started the all about me task.
Started and finished the all about me task

--- a/Intro/test.html
+++ b/Intro/test.html
@@ -2,9 +2,30 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>All about me! </title>
+    <title>Test</title>
+    <h1>All about me!</h1>
   </head>
   <body>
 
+    <p>My name is Emily </p>
+
+    <h2>My top 3 animes are:</h2>
+    <ol>
+      <li>Danganronpa</li>
+      <li>Attack on Titan</li>
+      <li>Kuroko no Basket</li>
+    </ol>
+
+    <h2> Animes I want to watch</h2>
+    <ul>
+      <li>Kaguya-sama</li>
+      <li>Konosuba</li>
+      <li>Jojo's Bizarre Adventure</li>
+      <li>Food Wars</li>
+      <li>Gintama</li>
+      <li>JuJutsu Kaisen</li>
+      <li>Blue exorcist</li>
+      <li>Ghost story (dub)</li>
+    </ul>
   </body>
 </html>
