--- a/Europe/index.html
+++ b/Europe/index.html
@@ -27,6 +27,7 @@
       <h2>Greece</h2>
       <p>Greece was a stunning surprise. We stayed in Crete for a week and were seduced by the scenery, history and the sheer friendliness of the locals. <br>
         We also spent time in Athens, marvelling at many of the ancient ruins.</p>
+        <a href="greece.html">Click here to find out about Greece</a>
 
       <h2>France</h2>
       <p>We hit France in the middle of a heat-wave, and spent a lot of time either indoors or hiding in the shade. <br> Paris was wonderful, and we enjoyed walking along the banks of River Seine, plus seeing all the famous sights. <br> We also drove down to Mont St Michel and visited the beaches of Normandy.
