--- a/Europe/greece.html
+++ b/Europe/greece.html
@@ -10,6 +10,16 @@
 
     <h3>Agia Triada</h3>
     <img src="images/agiatriada.jpg" alt="Agia Triada">
+    <p>There are many monasteries on Crete, and none more beautiful and peaceful than Agia Triada. There were lovely gardens throughout, and it was quiet and calm, with few tourists around.</p>
 
+    <h3>Parthenon, Athens</h3>
+    <img src="images/parthenon.jpg" alt="Parthenon">
+    <p>The Parthenon is one of the most famous sights around the world. Despite having seen it thousands of times in pictures, it still stuns when you first see it in person.<br>Of course, the thousands of tourists getting in the way can be a little frustrating!</p>
+
+    <h3>Temple of Olympian Zeus, Athens</h3>
+    <img src="images/templezeus.jpg" alt="Temple of Zeus">
+    <p>The Temple of Olympian Zeus towers above you, yet is still dwarved by the Parthenon sitting atop the Acropolis in the backgrounds.</p>
+
+    <a href="index.html">Home page</a>
   </body>
 </html>
