--- a/Europe/greece.html
+++ b/Europe/greece.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <!-- Linking to stylesheet -->
+    <link rel="stylesheet" href="stylesheet.css">
     <title>Greece</title>
     <h1>Greece</h1>
   </head>
