--- a/Europe/france.html
+++ b/Europe/france.html
@@ -2,9 +2,26 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <!-- Linking to stylesheet -->
+    <link rel="stylesheet" href="stylesheet.css">
     <title>France</title>
+    <h1>France</h1>
   </head>
   <body>
+    <p>France in the middle of one of its hottest summers on record when we visited <br>We spent time at the beach in Normandy as well as enjoying plenty of shaded cafes!</p>
 
+    <h3>Mont St Michel</h3>
+    <img src="images/montstmichel.jpg" alt="Mont St Michel">
+    <p>This famous old monastery is situated on an island and stands out prominently for miles around.<br>Narrow streets and thousands of tourists made for an overwhelming visit. </p>
+
+    <h3>Louvre Museum, Paris</h3>
+    <img src="images/louvre.jpg" alt="Lourve Museum">
+    <p>Our dose of culture on the trip. We spent hours roaming up and down the seemingless endless halls of art.</p>
+
+    <h3>Eiffel Tower, Paris</h3>
+    <img src="images/eiffel.jpg" alt="Eiffel Tower">
+    <p>We kept coming back to the Eiffel Tower, enjoying just hanging out in the park around its base.<br> We also enjoyed going to the top of the tower and the incredible view of Paris, not to mention eating delicious ice cream while up there.</p>
+
+    <a href="index.html">Home page</a>
   </body>
 </html>
