--- a/Europe/index.html
+++ b/Europe/index.html
@@ -2,12 +2,15 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <!-- Linking to stylesheet -->
+    <link rel="stylesheet" href="stylesheet.css">
     <title>Europe</title>
+    <!-- Title -->
     <h1>Trip to Europe</h1>
   </head>
   <body>
 
-
+<!-- list of countries that were visited -->
     <p>Some of the countries I visited were: </p>
       <ul>
         <li>United Kingdom</li>
@@ -17,6 +20,7 @@
       </ul>
       <p>Discover more about each country below!</p>
 
+<!-- small blurb about each country with links to further infomation -->
       <h2>United Kingdom</h2>
       <p>I spent a lot of time in the Uk, and travelled around as much as I could. Obviously, London was amazing, but there were plenty of other highlights!<br>
       We visited lots of churches and castles. The UK is filled with so many historic sights that you could spend years trying to see them all.</p>
@@ -30,8 +34,8 @@
         <a href="greece.html">Click here to find out about Greece</a>
 
       <h2>France</h2>
-      <p>We hit France in the middle of a heat-wave, and spent a lot of time either indoors or hiding in the shade. <br> Paris was wonderful, and we enjoyed walking along the banks of River Seine, plus seeing all the famous sights. <br> We also drove down to Mont St Michel and visited the beaches of Normandy.
-</p>
+      <p>We hit France in the middle of a heat-wave, and spent a lot of time either indoors or hiding in the shade. <br> Paris was wonderful, and we enjoyed walking along the banks of River Seine, plus seeing all the famous sights. <br> We also drove down to Mont St Michel and visited the beaches of Normandy.</p>
+      <a href="france.html">Click here to find out more about France</a>
 
   </body>
 </html>
