--- a/Europe/index.html
+++ b/Europe/index.html
@@ -24,10 +24,11 @@
       <h2>United Kingdom</h2>
       <p>I spent a lot of time in the Uk, and travelled around as much as I could. Obviously, London was amazing, but there were plenty of other highlights!<br>
       We visited lots of churches and castles. The UK is filled with so many historic sights that you could spend years trying to see them all.</p>
+      <a href="uk.html">Click here to find out about the Uk</a>
 
       <h2>Italy</h2>
       <p>We loved Italy! From the ancient ruins to the beautiful scenery and delicious food, we still have many wonderful memories.</p>
-
+      <a href="italy.html">Click here to find out about Italy</a>
       <h2>Greece</h2>
       <p>Greece was a stunning surprise. We stayed in Crete for a week and were seduced by the scenery, history and the sheer friendliness of the locals. <br>
         We also spent time in Athens, marvelling at many of the ancient ruins.</p>
