--- a/Europe/index.html
+++ b/Europe/index.html
@@ -2,15 +2,24 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+
+    <title>Europe</title>
     <!-- Linking to stylesheet -->
     <link rel="stylesheet" href="stylesheet.css">
-    <title>Europe</title>
+
 
   </head>
+
   <body>
 <!-- Title -->
       <h1>Trip to Europe</h1>
+
+
 <!-- list of countries that were visited -->
+<div class="container">
+<div class="left-content">
+
+
     <p>Some of the countries I visited were: </p>
       <ul>
         <li>United Kingdom</li>
@@ -20,7 +29,12 @@
       </ul>
       <p>Discover more about each country below!</p>
 
+    </div>
+
 <!-- small blurb about each country with links to further infomation -->
+  <div class="right-content">
+
+
       <h2>United Kingdom</h2>
       <p>I spent a lot of time in the Uk, and travelled around as much as I could. Obviously, London was amazing, but there were plenty of other highlights!<br>
       We visited lots of churches and castles. The UK is filled with so many historic sights that you could spend years trying to see them all.</p>
@@ -29,6 +43,7 @@
       <h2>Italy</h2>
       <p>We loved Italy! From the ancient ruins to the beautiful scenery and delicious food, we still have many wonderful memories.</p>
       <a href="italy.html">Click here to find out about Italy</a>
+
       <h2>Greece</h2>
       <p>Greece was a stunning surprise. We stayed in Crete for a week and were seduced by the scenery, history and the sheer friendliness of the locals. <br>
         We also spent time in Athens, marvelling at many of the ancient ruins.</p>
@@ -37,6 +52,8 @@
       <h2>France</h2>
       <p>We hit France in the middle of a heat-wave, and spent a lot of time either indoors or hiding in the shade. <br> Paris was wonderful, and we enjoyed walking along the banks of River Seine, plus seeing all the famous sights. <br> We also drove down to Mont St Michel and visited the beaches of Normandy.</p>
       <a href="france.html">Click here to find out more about France</a>
+    </div>
+</div>
 
   </body>
 </html>
